Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97080

Wrong video preview orientation on landscape

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 6.2.3, 6.3.0 Alpha, 6.2
    • 6.2.0
    • Multimedia
    • None
    • Android
    • 7337564717a1bb2f514b8eba78a206597dbe533f (qt/qtmultimedia/dev) 370d35ebfbbd405b8b2df96b2c25d73723239037 (qt/qtmultimedia/6.2)
    • 2021wk46POAndroid&Mobile

    Description

      Reproducible on the Recorder example.

      If the app starts at portrait mode and then moves to landscape mode, the preview video becomes messed up. View attached "portrait.jpg" and "landscape.jpg".
      If, on landscape mode, the preview is reset (the camera switch turned off and on) becomes fine until it moves to portrait again.
      The recording is not affected. When a recording starts will reset the preview before, and it will preview right during the recording. The final output video file is also ok.

      Attachments

        1. landscape.jpg
          landscape.jpg
          952 kB
        2. portrait.jpg
          portrait.jpg
          1.69 MB

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              samuelmira Samuel Mira
              samuelmira Samuel Mira
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes